# prompt-compression-gateway

./: .env.example  LICENSE  README  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: architecture.md  threat-model.md
examples/: demo.py
gateway/: compressor.py  main.py  model.py  models.py  policies.py
tests/: __init__.py
